Add resume page with submodule

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>
       <span class='time'>[00:00]</span>
       <span class='path'><a href='mailto:hwang@eunb.it'>hwang@eunb.it</a></span>
-      <span class='arrow'>&gt;</span>  I'm <a class='path' href='http://hwang.eunb.it' target='_blank'>EunBit Hwang</a>
+      <span class='arrow'>&gt;</span>  I'm <a class='path' href='/resume'>EunBit Hwang</a>
     </p>
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function() {
